Fix initial visibility on ipad

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -1,3 +1,7 @@
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
     background-color: black;
     margin: 0px;
@@ -19,9 +23,6 @@ body {
 }
 #container {
     text-align: center;
-    height: 100vh;
-    max-height: 100vh
-    min-height: 100vh
     margin: auto auto;
     position: relative;
 }
